--- a/server/src/routes/chocolate/css/chocolate.css
+++ b/server/src/routes/chocolate/css/chocolate.css
@@ -26,6 +26,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+	max-width: 400px;
 }
 
 #contentButtons > button {
@@ -55,7 +56,7 @@ body {
 	color: #000;
 }
 
-video, audio, img, iframe {
+video, audio, img, iframe, textarea {
 	width: 100%;
 	max-width: 400px;
 }
