--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -6,7 +6,7 @@
     <script src="/chocolate/js/addContent.js" defer></script>
 </head>
 <body>
-<img src="/chocolate/images/choclogo.webp" style="width:148px">
+<img src="/chocolate/images/choclogo.webp" class="logo">
 <div class="items">
     <% content.forEach((contentItem, index) => { %>
         <div class="item">
