--- a/server/src/templates/view.ejs
+++ b/server/src/templates/view.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/chocolate/css/chocolate.css">
 </head>
 <body>
-<img src="/chocolate/images/choclogo.webp" style="width:148px">
+<img src="/chocolate/images/choclogo.webp" class="logo">
 <div class="items">
     <% content.forEach((contentItem) => { %>
         <div class="item">
