--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -65,12 +65,14 @@
                 <form action="addFile" method="post" enctype="multipart/form-data">
                     <input id="uploadInput" type="file" name="file">
                     <input type="submit" value="Upload">
+                    <button id="fileCancel">Cancel</button>
                 </form>
             </div>
             <div id="linker">
                 <form action="addLink" method="post">
                     <input type="url" name="link">
                     <input type="submit" value="Add Link">
+                    <button id="linkCancel">Cancel</button>
                 </form>
             </div>
         </div>
