--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -69,7 +69,7 @@
             </div>
             <div id="linker">
                 <form action="addLink" method="post">
-                    <input type="url" name="link" placeholder="URL">
+                    <input id="linkput" type="url" name="link" placeholder="URL">
                     <input type="submit" value="Add Link">
                 </form>
                 <button id="linkCancel">Cancel</button>
