--- a/server/src/templates/intro.ejs
+++ b/server/src/templates/intro.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title></title>
-    <link rel="stylesheet" href="/chocolate/css/chocolate.css">
+    <link rel="stylesheet" href="css/chocolate.css">
 </head>
 <body>
-<img src="/chocolate/images/choclogo.webp" class="logo">
+<img src="images/choclogo.webp" class="logo">
 <div>Welcome. Make your gift into a hybrid gift by adding some personal digital content to it. </div>
 <div>Enter your order number to get started.</div>
 
