--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title></title>
-    <link rel="stylesheet" href="/chocolate/css/chocolate.css">
-    <script src="/chocolate/js/addContent.js" defer></script>
+    <link rel="stylesheet" href="../css/chocolate.css">
+    <script src="../js/addContent.js" defer></script>
 </head>
 <body>
-<img src="/chocolate/images/choclogo.webp" class="logo">
+<img src="../images/choclogo.webp" class="logo">
 <div class="items">
     <% content.forEach((contentItem, index) => { %>
         <div class="item">
