--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -4,6 +4,7 @@
     <title></title>
     <link rel="stylesheet" href="../../css/chocolate.css">
     <script src="../../js/addContent.js" defer></script>
+    <link rel="icon" type="image/webp" href="../../images/choclogo.webp" />
 </head>
 <body>
 <img src="../../images/choclogo.webp" class="logo">
