--- a/server/src/templates/view.ejs
+++ b/server/src/templates/view.ejs
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <title></title>
-    <link rel="stylesheet" href="/chocolate/css/chocolate.css">
+    <link rel="stylesheet" href="../../css/chocolate.css">
+
+    <link rel="icon" type="image/webp" href="images/choclogo.webp" />
 </head>
 <body>
-<img src="/chocolate/images/choclogo.webp" class="logo">
+<img src="../../images/choclogo.webp" class="logo">
 <div class="items">
     <% content.forEach((contentItem) => { %>
         <div class="item">
