--- a/server/src/templates/intro.ejs
+++ b/server/src/templates/intro.ejs
@@ -8,6 +8,7 @@
 			display: none;
 		}
     </style>
+    <link rel="icon" type="image/webp" href="images/choclogo.webp" />
 </head>
 <body>
 <img src="images/choclogo.webp" class="logo">
