--- a/server/src/templates/view.ejs
+++ b/server/src/templates/view.ejs
@@ -4,7 +4,7 @@
     <title></title>
     <link rel="stylesheet" href="../../css/chocolate.css">
 
-    <link rel="icon" type="image/webp" href="images/choclogo.webp" />
+    <link rel="icon" type="image/webp" href="../../images/choclogo.webp" />
 </head>
 <body>
 <img src="../../images/choclogo.webp" class="logo">
