--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -4,14 +4,16 @@
     <title></title>
     <link rel="stylesheet" href="../../css/chocolate.css">
     <script src="../../js/addContent.js" defer></script>
-    <link rel="icon" type="image/webp" href="../../images/choclogo.webp" />
+    <link rel="icon" type="image/webp" href="../../images/choclogo.webp"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <img src="../../images/choclogo.webp" class="logo">
 <div class="items">
     <% content.forEach((contentItem, index) => { %>
-        <div class="item">
-            <% if(contentItem.mimetype) { %>
+        <div class="item"
+             style="background-color: <%= index === 0 || index === 3 ? '#ffebe3' : index === 1 ? '#fab89d' : '#d1c8e1' %>">
+            <% if(contentItem && contentItem.mimetype) { %>
                 <% if(contentItem.mimetype.startsWith("image/")) { %>
                     <img src="<%= contentItem.uri %>"/>
                 <% } else if(contentItem.mimetype === 'video/youtube') { %>
@@ -28,8 +30,8 @@
                         <input type="submit" value="Save Message">
                     </form>
                 <% } else if(contentItem.mimetype === 'text/x-uri') { %>
-                    <div>
-                        <a href="<%= contentItem.uri %>" class="link">
+                    <% if(contentItem.uri) { %>
+                        <a href="<%= contentItem.uri %>" target="_blank" class="link">
                             <% if(contentItem.image) { %>
                                 <div><img src="<%= contentItem.image %>"></div>
                             <% } %>
@@ -41,42 +43,37 @@
                                 <div class="linkDescription"><%= contentItem.description %></div>
                             <% } %>
                         </a>
-                    </div>
+                    <% } else { %>
+                        <form action="editLink" method="post">
+                            <input id="linkput" type="url" name="link" placeholder="URL" value="<% contentItem.uri %>">
+                            <input type="hidden" name="item" value="<%= index %>">
+                            <input type="submit" value="Link Content">
+                        </form>
+                    <% } %>
                 <% } %>
-            <% } %>
-            <form action="deleteItem" method="post">
-                <input type="hidden" name="item" value="<%= index %>">
-                <input type="submit" value="Delete Item">
-            </form>
-        </div>
-    <% }); %>
-    <% if(content.length < 4) { %>
-        <div class="item">
-            <div id="contentButtons">
+                <form action="deleteItem" method="post">
+                    <input type="hidden" name="item" value="<%= index %>">
+                    <input type="submit" value="Delete Item">
+                </form>
+            <% } else { %>
                 <form action="addMessage" method="post">
                     <input type="submit" value="Add Message"/>
+                    <input type="hidden" name="item" value="<%= index %>">
                 </form>
-                <button id="addVideo">Add Video</button>
-                <button id="addAudio">Add Audio</button>
-                <button id="addImage">Add Picture</button>
-                <button id="addLink">Add Link</button>
-            </div>
-            <div id="uploader">
-                <form action="addFile" method="post" enctype="multipart/form-data">
-                    <input id="uploadInput" type="file" name="file">
-                    <input type="submit" value="Upload">
-                </form>
-                <button id="fileCancel">Cancel</button>
-            </div>
-            <div id="linker">
                 <form action="addLink" method="post">
-                    <input id="linkput" type="url" name="link" placeholder="URL">
-                    <input type="submit" value="Add Link">
+                    <input type="submit" value="Add Link"/>
+                    <input type="hidden" name="item" value="<%= index %>">
                 </form>
-                <button id="linkCancel">Cancel</button>
-            </div>
+                <button onclick="document.getElementById('uploadInput<%= index %>').click()">Upload Content</button>
+                <form action="addFile" method="post" enctype="multipart/form-data">
+                    <input type="hidden" name="item" value="<%= index %>">
+                    <input id="uploadInput<%= index %>" type="file" name="file" accept="image/*, video/*, audio/*"
+                           style="display: none">
+                </form>
+            <% } %>
         </div>
-    <% } %>
+    <% }); %>
 </div>
+<a href="." target="_blank">Preview</a>
 </body>
 </html>
