FAQ + Upload size

--- a/server/src/routes/chocolate/css/chocolate.css
+++ b/server/src/routes/chocolate/css/chocolate.css
@@ -41,6 +41,11 @@ body {
 	padding: 8px;
 }
 
+.quest {
+	font-weight: bold;
+	margin-top: 16px;
+}
+
 .item {
 	flex: 1 1 300px;
 	min-height: 250px;
