--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -80,11 +80,12 @@
         <!--<div style="font-size: smaller; padding-left: 12px; padding-top: 12px">Developed by the University of Nottingham. To help our research,
             please consider taking this short questionnaire.
         </div>-->
+        <a href="../../faq.html" style="padding: 16px">FAQs</a>
     </div>
     <a href="." target="_blank" style="flex: 1 1 300px; padding: 24px; text-align: end">Preview</a>
 </div>
 <script defer>
-	const maxFileSize = 1000000;
+	const maxFileSize = 10000000;
 
 	function humanFileSize(bytes, si = true, dp = 1) {
 		const thresh = si ? 1000 : 1024;
