--- a/server/src/templates/view.ejs
+++ b/server/src/templates/view.ejs
@@ -45,7 +45,8 @@
         </div>
     <% }); %>
     <div style="display: flex; flex: 1 1 300px">
-        <img src="../../images/uon.svg" style="width: 150px; align-self: center; padding-top: 12px"/>
+        <img src="<%= prefix %>../images/uon.svg" style="width: 150px; align-self: center; padding-top: 12px"/>
+        <a href="<%= prefix %>../faq.html" style="padding: 16px">FAQs</a>
         <!--<div style="font-size: smaller; padding-left: 12px; padding-top: 12px">Developed by the University of Nottingham. To help our research,
             please consider taking this short questionnaire.
         </div>-->
