--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -80,7 +80,7 @@
         <!--<div style="font-size: smaller; padding-left: 12px; padding-top: 12px">Developed by the University of Nottingham. To help our research,
             please consider taking this short questionnaire.
         </div>-->
-        <a href="../../faq.html" style="padding: 16px">FAQs</a>
+        <a href="<%= prefix %>../faq.html" style="padding: 16px; align-self: center">FAQs</a>
     </div>
     <a href="." target="_blank" style="flex: 1 1 300px; padding: 24px; text-align: end">Preview</a>
 </div>
