Those are the FAQs

--- a/server/src/templates/intro.ejs
+++ b/server/src/templates/intro.ejs
@@ -39,7 +39,7 @@
     </div>
 </form>
 
-<a href="faq.html" style="padding: 8px 16px; font-size: smaller">FAQs</a>
+<a href="faq.html" style="padding: 8px 16px; font-size: x-small">FAQs</a>
 
 <script>
 	const createForm = document.getElementById('create')
